--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  width: 95vw;
+  height: 10vh;
+  margin: auto;
+  box-shadow: 0 0 3px gray;
   display: flex;
-  flex-direction: column;
+  background-color: white;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.logo {
+  width: 42vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.head-logo {
+  color: rgb(62, 62, 255);
+}
+
+ul {
+  list-style: none;
+  width: 15vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.bookstore {
+  width: 95vw;
+  height: 150vh;
+  margin: auto;
+  border: 1px solid black;
+}
+
+.book-center {
+  width: 95%;
+  height: 100%;
+  margin: auto;
+}
+
+.books {
+  width: 100%;
+  height: 25vh;
+  margin-top: 3vh;
+  border-radius: 3px;
+  padding-top: 1vh;
+  background-color: white;
+  box-shadow: 0 0 3px gray;
+}
+
+.book-left {
+  width: 30%;
+  margin-top: 3vh;
+  margin-left: 2vw;
+}
+
+.book-actions {
+  width: 30%;
+  margin-top: 3vh;
+  margin-left: 2vw;
+}
+
+.add-new {
+  color: gray;
+  margin-top: 3vh;
+}
+
+.input-form {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5vh;
+}
+
+.book-input {
+  width: 40vw;
+  height: 6vh;
+}
+
+.book-select {
+  width: 20vw;
+  height: 6vh;
+}
+
+.add-btn {
+  padding: 1.8vh 4vw;
+  background-color: rgb(81, 81, 255);
+  border: none;
+  border-radius: 5px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
