--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ ul {
 
 .input-form {
   display: flex;
+  border: 1px solid black;
   justify-content: space-between;
   margin-top: 5vh;
 }
@@ -81,6 +82,7 @@ ul {
 .book-input {
   width: 40vw;
   height: 6vh;
+  margin-right: 3%;
 }
 
 .book-select {
