--- a/src/App.css
+++ b/src/App.css
@@ -1,193 +1,212 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .book-container {
-    background-color: rgb(233, 233, 233);
+  background-color: rgb(233, 233, 233);
 }
+
 .navbar {
-    width: 95vw;
-    height: 10vh;
-    margin: auto;
-    display: flex;
-    background-color: white;
-    align-items: center;
-    position: relative;
+  width: 95vw;
+  height: 10vh;
+  margin: auto;
+  display: flex;
+  background-color: white;
+  align-items: center;
+  position: relative;
 }
+
 .user-circle {
-    border: 1px solid rgb(193, 193, 193);
-    position: absolute;
-    right: 5%;
-    padding: 1.5vh 1vw;
-    border-radius: 100%;
+  border: 1px solid rgb(193, 193, 193);
+  position: absolute;
+  right: 5%;
+  padding: 1.5vh 1vw;
+  border-radius: 100%;
 }
+
 .custom-icon {
-    color: #0290ff;
+  color: #0290ff;
 }
+
 .logo {
-    width: 42vw;
-    display: flex;
-    justify-content: space-around;
+  width: 42vw;
+  display: flex;
+  justify-content: space-around;
 }
 
 .head-logo {
-    color: #0290ff;
+  color: #0290ff;
 }
 
 ul {
-    list-style: none;
-    width: 15vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  list-style: none;
+  width: 15vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .link-style {
-    text-decoration: none;
-    font-size: 1vw;
-    color: #121212;
+  text-decoration: none;
+  font-size: 1vw;
+  color: #121212;
 }
+
 .book-cat {
-    color: #d8d8d8;
+  color: #d8d8d8;
 }
+
 .book-title {
-    color: #121212;
+  color: #121212;
 }
+
 .book-auth {
-    color: #4386bf;
+  color: #4386bf;
 }
+
 .book-btn {
-    color: #4386bf;
-    border: none;
-    margin-right: 4%;
-    padding-right: 4%;
-    background-color: white;
-    border-right: 1px solid rgb(205, 204, 204);
+  color: #4386bf;
+  border: none;
+  margin-right: 4%;
+  padding-right: 4%;
+  background-color: white;
+  border-right: 1px solid rgb(205, 204, 204);
 }
+
 .bookstore {
-    width: 95vw;
-    height: auto;
-    margin: auto;
-    padding-top: 3vh;
-    background-color: rgb(241, 241, 241);
+  width: 95vw;
+  height: auto;
+  margin: auto;
+  padding-top: 3vh;
+  background-color: rgb(241, 241, 241);
 }
 
 .book-center {
-    width: 95%;
-    height: 100%;
-    margin: auto;
-    padding-bottom: 20vh;
+  width: 95%;
+  height: 100%;
+  margin: auto;
+  padding-bottom: 20vh;
 }
 
 .books {
-    width: 100%;
-    height: 25vh;
-    margin-top: 3vh;
-    border-radius: 3px;
-    padding-top: 1vh;
-    background-color: white;
-    box-shadow: 0 0 1px gray;
-    position: relative;
+  width: 100%;
+  height: 25vh;
+  margin-top: 3vh;
+  border-radius: 3px;
+  padding-top: 1vh;
+  background-color: white;
+  box-shadow: 0 0 1px gray;
+  position: relative;
 }
 
 .book-left {
-    width: 30%;
-    margin-top: 3vh;
-    margin-left: 2vw;
+  width: 30%;
+  margin-top: 3vh;
+  margin-left: 2vw;
 }
 
 .book-actions {
-    width: 30%;
-    margin-top: 3vh;
-    margin-left: 2vw;
+  width: 30%;
+  margin-top: 3vh;
+  margin-left: 2vw;
 }
 
 .add-new {
-    color: #888;
-    margin-top: 3vh;
-    font-size: 1vw;
-    font-weight: bold;
+  color: #888;
+  margin-top: 3vh;
+  font-size: 1vw;
+  font-weight: bold;
 }
+
 .input-cont {
-    margin-top: 5vh;
-    padding-top: 3vh;
-    border-top: 1px solid rgb(195, 195, 195);
+  margin-top: 5vh;
+  padding-top: 3vh;
+  border-top: 1px solid rgb(195, 195, 195);
 }
+
 .input-form {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5vh;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5vh;
 }
 
 .book-input {
-    width: 30vw;
-    height: 6vh;
-    margin-right: 3%;
+  width: 30vw;
+  height: 6vh;
+  margin-right: 3%;
 }
 
 .book-select {
-    width: 20vw;
-    height: 6vh;
+  width: 20vw;
+  height: 6vh;
 }
 
 .add-btn {
-    padding: 1.8vh 4vw;
-    background-color: rgb(81, 81, 255);
-    border: none;
-    border-radius: 5px;
-    color: white;
+  padding: 1.8vh 4vw;
+  background-color: rgb(81, 81, 255);
+  border: none;
+  border-radius: 5px;
+  color: white;
 }
+
 .progress {
-    width: 30%;
-    height: 50%;
-    position: absolute;
-    left: 40%;
-    top: 0;
-    border: none;
-    display: flex;
-    align-items: center;
-    border-right: 1px solid rgb(205, 204, 204);
-    margin-top: 6vh;
+  width: 30%;
+  height: 50%;
+  position: absolute;
+  left: 40%;
+  top: 0;
+  border: none;
+  display: flex;
+  align-items: center;
+  border-right: 1px solid rgb(205, 204, 204);
+  margin-top: 6vh;
 }
+
 .show-progress {
-    margin-left: 5%;
+  margin-left: 5%;
 }
+
 .show-progress p {
-    color: #c6c6c6;
+  color: #c6c6c6;
 }
+
 .progress-circle {
-    width: 20%;
-    height: 80%;
-    border-right: 5px solid #4386bf;
-    border-bottom: 5px solid #4386bf;
-    border-left: 5px solid rgb(216, 216, 216);
-    border-top: 5px solid #4386bf;
-    border-radius: 100%;
-    /* border: 1px solid black; */
+  width: 20%;
+  height: 80%;
+  border-right: 5px solid #4386bf;
+  border-bottom: 5px solid #4386bf;
+  border-left: 5px solid rgb(216, 216, 216);
+  border-top: 5px solid #4386bf;
+  border-radius: 100%;
+
+  /* border: 1px solid black; */
 }
+
 .chapter {
-    width: 30%;
-    height: 60%;
-    margin-top: 4vh;
-    padding-left: 3vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
-    right: 0;
-    top: 0;
+  width: 30%;
+  height: 60%;
+  margin-top: 4vh;
+  padding-left: 3vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
+
 .book-chapt {
-    color: black;
+  color: black;
 }
+
 .progress-btn {
-    width: 13vw;
-    height: 4vh;
-    background-color: #0290ff;
-    color: #ffffff;
-    border-radius: 3px;
-    border: none;
-    cursor: pointer;
+  width: 13vw;
+  height: 4vh;
+  background-color: #0290ff;
+  color: #fff;
+  border-radius: 3px;
+  border: none;
+  cursor: pointer;
 }
